Fixed issue with author retrieval on tweets